profile image setting

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <section class="hero container">
   <div class="hero-grid">
     <div class="hero-card">
-      <img class="hero-pic" src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Profile">
+      <img class="hero-pic" src="{{ url_for('static', filename='static/images/profile.jpg') }}" alt="Profile">
     </div>
 
     <div class="hero-text fade">
