--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <title>{{ content.name }} — Portfolio</title>
 
   <!-- Favicons (optional) -->
-  <link rel="icon" href="{{ url_for('static', filename='images/profile.jpg') }}" />
+  <link rel="icon" href="{{ url_for('static', filename='images/favicon_v2.png') }}" />
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
   <meta name="description" content="{{ content.about }}">
