--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
 
       <nav class="nav">
         <a href="#about">About</a>
+        <a href="#education">Education</a>
         <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
