comment header image

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img class="brand-avatar" src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Profile">
+        <!--<img class="brand-avatar" src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Profile">-->
         <div class="brand-info">
           <h1 class="name">{{ content.name }}</h1>
           <p class="title">{{ content.title }}</p>
