--- a/templates/index.html
+++ b/templates/index.html
@@ -84,9 +84,17 @@
       <div class="timeline-item">
         <div class="ti-head">
           <strong>{{ e.role }}</strong> • {{ e.org }}
+          <span class="ti-location">{{ e.location }}</span>
           <span class="ti-date">{{ e.date }}</span>
         </div>
-        <div class="ti-body">{{ e.details }}</div>
+        
+        <div class="ti-body">
+          <ul>
+            {% for detail in e.details %}
+              <li>{{ detail }}</li>
+            {% endfor %}
+          </ul>
+        </div>
       </div>
     {% endfor %}
   </div>
