--- a/templates/index.html
+++ b/templates/index.html
@@ -85,9 +85,9 @@
         <div class="ti-head"> <div class="ti-role-container">
             <strong>{{ e.role }}</strong> 
             
-            <span class="ti-org-loc">
+           <p class="ti-org-loc">
               {{ e.org }} • {{ e.location }}
-            </span>
+            </p>
           </div>
           
           <span class="ti-date">{{ e.date }}</span>
